--- a/src/app/heroes/hero-list/hero-list.component.css
+++ b/src/app/heroes/hero-list/hero-list.component.css
@@ -5,12 +5,13 @@
   padding: 0;
   width: 15em;
 }
+
 .heroes li {
   position: relative;
   cursor: pointer;
   background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
+  margin: 0.5em;
+  padding: 0.3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
@@ -18,7 +19,7 @@
 .heroes li:hover {
   color: #607D8B;
   background-color: #DDD;
-  left: .1em;
+  left: 0.1em;
 }
 
 .heroes a {
@@ -29,7 +30,7 @@
 }
 
 .heroes a:hover {
-  color:#607D8B;
+  color: #607D8B;
 }
 
 .heroes .badge {
@@ -45,7 +46,7 @@
   height: 1.8em;
   min-width: 16px;
   text-align: right;
-  margin-right: .8em;
+  margin-right: 0.8em;
   border-radius: 4px 0 0 4px;
 }
 
@@ -74,6 +75,7 @@ button.delete {
   background-color: #CFD8DC;
   color: white;
 }
+
 .heroes li.selected:hover {
   background-color: #BBD8DC;
 }
@@ -83,3 +85,5 @@ Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at http://angular.io/license
 */
+
+/*# sourceMappingURL=hero-list.component.css.map */
